--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
         "isolatedModules": true,
         "noEmit": true,
         "outDir": "dist",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": ["src"],
     "exclude": ["node_modules"],
