--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "@swc/core": "^1.3.107",
         "log4js": "^6.9.1",
         "neo4j-driver": "^5.17.0",
         "reflect-metadata": "^0.2.1"
