--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -13,6 +13,9 @@ jobs:
             github.event.workflow_run.conclusion == 'success' &&
             github.event.workflow_run.head_branch == 'main'
         steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
+
             - name: Setup bun
               uses: oven-sh/setup-bun@v1
               with:
