--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,11 +15,15 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
-              
+
             - name: Setup bun
               uses: oven-sh/setup-bun@v1
               with:
                 bun-version: latest
+
+            - name: Install dependencies
+              run: |
+                bun install
 
             - name: Run tests
               run: |
