--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -36,5 +36,6 @@ jobs:
 
             - name: Publish
               run: |
+                  npm version patch -m "Bump version to %s"
                   echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
                   bun run publish
