--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -37,4 +37,4 @@ jobs:
             - name: Publish
               run: |
                   echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-                  bun run publish
+                  npm publish
