add development branch

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,10 +4,12 @@ on:
     push:
         branches:
             - main
+            - development
             - feature/*
     pull_request:
         branches:
             - main
+            - development
 
 jobs:
     test:
